# rules_go_issue2595

./: BUILD.bazel  WORKSPACE  deps.bzl  main.go
